--- a/plugin/options.html
+++ b/plugin/options.html
@@ -37,8 +37,10 @@
       background-color: #45a049;
     }
     .status {
-      margin-top: 15px;
+      width: 100px;
+      margin: 15px auto 0;
       padding: 10px;
+      text-align: center;
       border-radius: 4px;
       display: none;
     }
@@ -61,22 +63,40 @@
       display: flex;
       gap: 10px;
       margin-bottom: 10px;
+      align-items: center;
     }
     .whitelist-item input {
       flex: 1;
     }
     .whitelist-item button {
-      padding: 8px;
+      padding: 8px 16px;
+      min-width: 60px;
       background-color: #f44336;
     }
     .add-button {
-      margin-top: 10px;
-      background-color: #2196F3 !important;
+      margin-top: 15px;
+      width: 100%;
+      background-color: #2196F3;
+      padding: 12px;
+      font-size: 14px;
+      transition: background-color 0.3s;
+    }
+    .add-button:hover {
+      background-color: #1976D2;
     }
     .hint {
       font-size: 12px;
       color: #666;
       margin-top: 5px;
+    }
+    .save-container {
+      text-align: center;
+      margin-top: 20px;
+    }
+    #save {
+      min-width: 120px;
+      padding: 10px 24px;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -90,14 +110,6 @@
     <label for="port">端口</label>
     <input type="number" id="port" placeholder="例如：1080">
   </div>
-  <div class="form-group">
-    <label for="username">用户名</label>
-    <input type="text" id="username" placeholder="可选">
-  </div>
-  <div class="form-group">
-    <label for="password">密码</label>
-    <input type="password" id="password" placeholder="可选">
-  </div>
   
   <div class="whitelist-container">
     <h3>白名单设置</h3>
@@ -106,7 +118,9 @@
     <button id="addWhitelist" class="add-button">添加白名单</button>
   </div>
   
-  <button id="save" style="margin-top: 20px;">保存设置</button>
+  <div class="save-container">
+    <button id="save">保存设置</button>
+  </div>
   <div id="status" class="status"></div>
   <script src="options.js"></script>
 </body>
